cargo_check.log
    Checking nmp-server v0.1.0 (C:\Users\maseo\Documents\Developer\Projects\NMP v1.0-alpha\nmp-server)
warning: unused import: `SwarmEvent`
 --> nmp-server\src\p2p.rs:7:45
  |
7 |     swarm::{NetworkBehaviour, SwarmBuilder, SwarmEvent},
  |                                             ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `put` found for mutable reference `&mut MemoryStore` in the current scope
  --> nmp-server\src\main.rs:66:56
   |
66 |     let _ = swarm.behaviour_mut().kademlia.store_mut().put(record);
   |                                                        ^^^ method not found in `&mut MemoryStore`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `RecordStore` which provides `put` is implemented but not in scope; perhaps you want to import it
   |
 4 + use libp2p::libp2p_kad::store::RecordStore;
   |

For more information about this error, try `rustc --explain E0599`.
warning: `nmp-server` (bin "nmp-server") generated 1 warning
error: could not compile `nmp-server` (bin "nmp-server") due to 1 previous error; 1 warning emitted
